# obsidian-agent

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  mise.toml  pyproject.toml
.claude/skills/deep-research/: SKILL.md
.devcontainer/: Containerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: test.yml
sample/: feed.md  feed.yaml
scripts/common/: config.py  notifier.py  obsidian.py
scripts/reader/: README.md  __init__.py  agent.py  cache.py  checker.py  config.py  feed.py  main.py  md_feed_parser.py  notifier.py  parser.py  summarizer.py  writer.py
scripts/research/: main.py
tests/: test_main_cli.py
tests/common/: test_notifier.py
tests/reader/: conftest.py  summarizer_eval.test.json  test_cache.py  test_config.json  test_conftest.py  test_feed.py  test_main.py  test_md_feed_parser.py  test_notifier.py  test_package.py  test_parser.py  test_processor.py  test_summarizer.py  test_summarizer_eval.py  test_writer.py
